# mountllm

./: .gitignore  ENHANCED_IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  PHASE1_SUMMARY.md  PROCESSED_DATA_OPTIMIZATIONS.md  README.md  main.py  pyproject.toml
src/: __init__.py
src/api/: __init__.py  camptocamp.py  models.py
src/utils/: helpers.py
tests/: test_basic.py
